Small changes for debugging

--- a/mava/configs/system/rec_idqn.yaml
+++ b/mava/configs/system/rec_idqn.yaml
@@ -1,6 +1,6 @@
 # --- Defaults FF-IDQN ---
 seed: 1
-n_envs: 128 # number of environments to run in parallel (vmapped)
+n_envs: 8 # number of environments to run in parallel (vmapped)
 
 # --- Agent observations ---
 add_agent_id: True
@@ -11,15 +11,17 @@ total_timesteps: 2e7
 buffer_min_size: 132  # number of steps to take with random actions at the start of training
 update_batch_size: 1 # Number of vectorised gradient updates per device.
 
-rollout_length: 1 # Number of environment steps per vectorised environment. breaks code - traj buffer receives this
+rollout_length: 100 # Number of environment steps per vectorised environment. breaks code - traj buffer receives this
 epochs: 4 # Number of learn epochs per training data batch.
 
 # sizes
-buffer_size: 10_000  # size of the replay buffer. Note: total size is this * num_devices
+buffer_size: 3_000  # size of the replay buffer. Note: total size is this * num_devices
 batch_size: 32 #as in jaxmarl paper
 # learning rates
 q_lr: 3e-4  # the learning rate of the Q network network optimizer
 # other
+hard_update: True
+update_period: 200
 tau: 0.005  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
 
