--- a/mava/configs/network/mlp.yaml
+++ b/mava/configs/network/mlp.yaml
@@ -8,6 +8,9 @@ actor_network:
 
 action_head:
   _target_: mava.networks.DiscreteActionHead # [DiscreteActionHead, ContinuousActionHead]
+  # Needed for ContinuousActionHead:
+  sigma_min: -0.4
+  sigma_max: 1.0
 
 critic_network:
   pre_torso:
