--- a/mava/configs/network/rnn.yaml
+++ b/mava/configs/network/rnn.yaml
@@ -13,6 +13,9 @@ actor_network:
 
 action_head:
   _target_: mava.networks.DiscreteActionHead # [DiscreteActionHead, ContinuousActionHead]
+  # Needed for ContinuousActionHead:
+  sigma_min: -0.4
+  sigma_max: 1.0
 
 critic_network:
   pre_torso:
