fix: update time-limit in keeping with lit

--- a/mava/configs/env/matrax.yaml
+++ b/mava/configs/env/matrax.yaml
@@ -25,4 +25,5 @@ scenario:
 eval_metric: episode_return
 
 kwargs:
-  time_limit: 500
+  # This value is in keeping with 'Benchmarking Multi-Agent Deep Reinforcement Learning Algorithms in Cooperative Tasks'
+  time_limit: 25
