--- a/mava/configs/system/sac/ff_isac.yaml
+++ b/mava/configs/system/sac/ff_isac.yaml
@@ -3,7 +3,7 @@ seed: 1
 n_envs: 16 # number of environments to run in parallel (vmapped)
 
 # --- Agent observations ---
-add_agent_id: True
+add_agent_id: False
 
 # --- RL hyperparameters ---
 # step related
@@ -16,8 +16,8 @@ epochs: 1 # number of learn epochs per training data batch.
 policy_frequency: 4  # the frequency of training policy - every n q learning steps the policy is trained once
 
 # sizes
-buffer_size: 1000000  # size of the replay buffer. Note: total size is this * num_devices
-batch_size: 64
+buffer_size: 500000  # size of the replay buffer. Note: total size is this * num_devices
+batch_size: 32
 
 # learning rates
 policy_lr: 3e-4  # the learning rate of the policy network optimizer
