--- a/mava/configs/system/rec_iql.yaml
+++ b/mava/configs/system/rec_iql.yaml
@@ -1,13 +1,12 @@
 # --- Defaults REC-IDQN ---
+total_timesteps: 20_000_000
+num_updates: 1000 # total_timesteps takes preference
 seed: 1
-n_envs: 32 # Number of environments to run in parallel (vmapped).
 
 # --- Agent observations ---
 add_agent_id: True
 
 # --- RL hyperparameters ---
-# step related
-total_timesteps: 20_000_000
 buffer_min_size: 132  # Number of steps to take with random actions at the start of training.
 update_batch_size: 1 # Number of vectorised gradient updates per device.
 
@@ -16,7 +15,7 @@ epochs: 2 # Number of learn epochs per training data batch.
 
 # sizes
 buffer_size: 5_000  # size of the replay buffer. Note: total size is this * num_devices
-batch_size: 32 #as in jaxmarl paper
+sample_batch_size: 32 #as in jaxmarl paper
 
 # learning rates
 q_lr: 3e-4  # the learning rate of the Q network network optimizer
