--- a/mava/configs/env/connector.yaml
+++ b/mava/configs/env/connector.yaml
@@ -10,5 +10,9 @@ env_name: MaConnector # Used for logging purposes.
 # This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
 eval_metric: episode_return
 
+# Whether the environment observations encode implicit agent IDs. If True, the AgentID wrapper is not used.
+# This should not be changed.
+implicit_agent_id: True
+
 kwargs:
   time_limit: 100
