--- a/mava/configs/env/gigastep.yaml
+++ b/mava/configs/env/gigastep.yaml
@@ -8,6 +8,10 @@ env_name: Gigastep
 
 eval_metric: win_rate
 
+# Whether the environment observations encode implicit agent IDs. If True, the AgentID wrapper is not used.
+# This should not be changed.
+implicit_agent_id: False
+
 # Currently we only support discrete actions and vector observations.
 kwargs:
   max_episode_length: 500
