--- a/mava/configs/env/mabrax.yaml
+++ b/mava/configs/env/mabrax.yaml
@@ -20,5 +20,5 @@ implicit_agent_id: False
 kwargs:
   episode_length: 1000
   homogenisation_method: max # Default is None. Options: [max, concat] if dimensions of observations and actions are not homogeneous across agents.
-  # Note: When using "max", a one-shot vector representing the agent ID is added. Therefore ensure that the `system.add_ids_to_agent_view=False`
+  # Note: When using "max", a one-shot vector representing the agent ID is added. Therefore ensure that the `system.add_agent_ids=False`
   # to avoid adding redundant agent IDs to the view.
