--- a/mava/configs/network/rnn.yaml
+++ b/mava/configs/network/rnn.yaml
@@ -26,7 +26,7 @@ critic_network:
     use_layer_norm: False
     activation: relu
 
-q_learner_network:
+q_network:
   pre_torso:
     module: mava.networks.MLPTorso
     layer_sizes: [256]
