Swapped network outputs

--- a/mava/configs/logger/rec_iql.yaml
+++ b/mava/configs/logger/rec_iql.yaml
@@ -6,4 +6,4 @@ system_name: rec_iql
 # --- Neptune options ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [ff-idqn, lbf]
+  neptune_tag: [louisebeyers, rec-iql-pr-evidence]
