--- a/mava/configs/system/sac/ff_isac.yaml
+++ b/mava/configs/system/sac/ff_isac.yaml
@@ -6,12 +6,14 @@ add_agent_id: False
 
 # --- RL hyperparameters ---
 # step related
-total_timesteps: 3e8
+total_timesteps: 2e7 # Set the total environment steps.
+# If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
+num_updates: 625000 # Number of updates
 explore_steps: 5000  # number of steps to take with random actions at the start of training
 update_batch_size: 1 # number of vectorised gradient updates per device.
 
-rollout_length: 1 # number of environment steps per vectorised environment.
-epochs: 1 # number of learn epochs per training data batch.
+rollout_length: 2 # number of environment steps per vectorised environment.
+epochs: 32 # number of learn epochs per training data batch.
 policy_frequency: 4  # the frequency of training policy - every n q learning steps the policy is trained once
 
 # sizes
