--- a/mava/configs/system/sac/ff_isac.yaml
+++ b/mava/configs/system/sac/ff_isac.yaml
@@ -14,11 +14,12 @@ update_batch_size: 1 # number of vectorised gradient updates per device.
 
 rollout_length: 2 # number of environment steps per vectorised environment.
 epochs: 32 # number of learn epochs per training data batch.
-policy_update_frequency: 4  # the frequency of training policy -
-# every `policy_frequency` q network learning steps the policy network is trained `policy_frequency` times
+policy_update_delay: 4  # the delay before training the policy -
+# Every `policy_update_delay` q network learning steps the policy network is trained.
+# It is trained `policy_update_delay` times to compensate, this is a TD3 trick.
 
 # sizes
-buffer_size: 500000  # size of the replay buffer. Note: total size is this * num_devices
+buffer_size: 1000000  # size of the replay buffer. Note: total size is this * num_devices
 batch_size: 32
 
 # learning rates
