--- a/mava/configs/system/sac/ff_masac.yaml
+++ b/mava/configs/system/sac/ff_masac.yaml
@@ -1,28 +1,31 @@
-# --- Defaults FF-ISAC ---
+# --- Defaults FF-MASAC ---
 seed: 1
-n_envs: 16 # number of environments to run in parallel (vmapped)
 
 # --- Agent observations ---
 add_agent_id: False
 
 # --- RL hyperparameters ---
 # step related
-total_timesteps: 3e8
+total_timesteps: ~ # Set the total environment steps.
+# If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
+num_updates: 625000 # Number of updates
 explore_steps: 5000  # number of steps to take with random actions at the start of training
 update_batch_size: 1 # number of vectorised gradient updates per device.
 
-rollout_length: 1 # number of environment steps per vectorised environment.
-epochs: 1 # number of learn epochs per training data batch.
-policy_frequency: 4  # the frequency of training policy - every n q learning steps the policy is trained once
+rollout_length: 2 # number of environment steps per vectorised environment.
+epochs: 32 # number of learn epochs per training data batch.
+policy_update_delay: 4  # the delay before training the policy -
+# Every `policy_update_delay` q network learning steps the policy network is trained.
+# It is trained `policy_update_delay` times to compensate, this is a TD3 trick.
 
 # sizes
-buffer_size: 500000  # size of the replay buffer. Note: total size is this * num_devices
+buffer_size: 1000000  # size of the replay buffer. Note: total size is this * num_devices
 batch_size: 32
 
 # learning rates
 policy_lr: 3e-4  # the learning rate of the policy network optimizer
 q_lr: 1e-3  # the learning rate of the Q network network optimizer
-alpha_lr: 13e-4  # the learning rate of the alpha optimizer
+alpha_lr: 3e-4  # the learning rate of the alpha optimizer
 
 # SAC specific
 tau: 0.005  # smoothing coefficient for target networks
