--- a/mava/configs/env/cleaner.yaml
+++ b/mava/configs/env/cleaner.yaml
@@ -1,7 +1,7 @@
 # ---Environment Configs---
 defaults:
   - _self_
-  - scenario: clean-5x5x5a # [clean-10x10x10a, clean-15x15x15a, clean-20x20x20a, clean-30x30x30a]
+  - scenario: clean-5x5x5a # [clean-5x5x5a, clean-10x10x10a, clean-15x15x15a, clean-20x20x20a, clean-30x30x30a]
 # Further environment config details in "clean-5x5x3a" file.
 
 env_name: Cleaner # Used for logging purposes.
