--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,8 +5,8 @@ flax # ~=0.7.5 breaks marlin
 gigastep @ git+https://github.com/mlech26l/gigastep
 hydra-core==1.3.2
 id-marl-eval @ git+https://github.com/instadeepai/marl-eval
-jax[cuda12_pip] # this is what Louise needs on her PC
-jaxlib[cuda12_pip]
+jax
+jaxlib
 jaxmarl
 jumanji @ git+https://github.com/sash-a/jumanji
 matrax @ git+https://github.com/instadeepai/matrax
