--- a/mava/configs/system/q_learning/rec_iql.yaml
+++ b/mava/configs/system/q_learning/rec_iql.yaml
@@ -15,7 +15,7 @@ epochs: 2 # Number of learn epochs per training data batch.
 
 # sizes
 buffer_size: 5_000  # size of the replay buffer. Note: total size is this * num_devices
-sample_batch_size: 32 #as in jaxmarl paper
+sample_batch_size: 32  # size of training data batch sampled from the buffer
 
 # learning rates
 q_lr: 3e-4  # the learning rate of the Q network network optimizer
