fix: network instantiation now using hydra, and config option min_buffer_size made more sensible

--- a/mava/configs/network/rnn.yaml
+++ b/mava/configs/network/rnn.yaml
@@ -30,12 +30,12 @@ critic_network:
 
 q_network:
   pre_torso:
-    module: mava.networks.MLPTorso
+    _target_: mava.networks.MLPTorso
     layer_sizes: [128]
     use_layer_norm: False
     activation: relu
   post_torso:
-    module: mava.networks.MLPTorso
+    _target_: mava.networks.MLPTorso
     layer_sizes: [128]
     use_layer_norm: False
     activation: relu
