--- a/mava/configs/system/q_learning/rec_iql.yaml
+++ b/mava/configs/system/q_learning/rec_iql.yaml
@@ -5,6 +5,7 @@ seed: 1
 
 # --- Agent observations ---
 add_agent_id: True
+mean_reward: False
 
 # --- RL hyperparameters ---
 buffer_min_size: 32
@@ -21,6 +22,7 @@ sample_batch_size: 32  # size of training data batch sampled from the buffer
 q_lr: 3e-4  # the learning rate of the Q network network optimizer
 clip_optimiser: False
 global_norm: 10 # value used to clip optimiser
+
 # other
 hard_update: False
 update_period: 200
