--- a/mava/configs/system/q_learning/rec_iql.yaml
+++ b/mava/configs/system/q_learning/rec_iql.yaml
@@ -8,7 +8,7 @@ add_agent_id: True
 mean_reward: False
 
 # --- RL hyperparameters ---
-buffer_min_size: 32
+min_buffer_size: 32
 update_batch_size: 1 # Number of vectorised gradient updates per device.
 
 rollout_length: 2 # Number of environment steps per vectorised environment.
