chore: removed distrax relic imports

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,5 +1,4 @@
 colorama
-distrax @ git+https://github.com/google-deepmind/distrax  # distrax release doesn't support jax > 0.4.13
 flashbax~=0.1.0
 flax
 gigastep @ git+https://github.com/mlech26l/gigastep
@@ -16,4 +15,5 @@ omegaconf
 optax
 protobuf~=3.20
 tensorboard_logger
+tensorflow_probability
 type_enforced # needed because gigastep is missing this dependency
