--- a/mava/configs/logger/base_logger.yaml
+++ b/mava/configs/logger/base_logger.yaml
@@ -4,12 +4,12 @@ base_exp_path: results # Base path for logging.
 use_console: True # Whether to log to stdout.
 use_tb: False # Whether to use tensorboard logging.
 use_json: False # Whether to log marl-eval style to json files.
-use_neptune: True  # Whether to log to neptune.ai.
+use_neptune: False  # Whether to log to neptune.ai.
 
 # --- Other logger kwargs ---
 kwargs:
   neptune_project: Instadeep/Mava
-  neptune_tag: [louisebeyers,iql-term-trunc]
+  neptune_tag: [develop]
   detailed_neptune_logging: False  # having mean/std/min/max can clutter neptune so we make it optional
   json_path: ~ # If set, json files will be logged to a set path so that multiple experiments can
     # write to the same json file for easy downstream aggregation and plotting with marl-eval.
