--- a/mava/configs/env/scenario/2s-8x8-2p-2f-coop.yaml
+++ b/mava/configs/env/scenario/2s-8x8-2p-2f-coop.yaml
@@ -11,4 +11,4 @@ task_config:
   force_coop: True # force cooperation between agents.
 
 env_kwargs:
-  {}
+  {}  # there are no scenario specific env_kwargs for this env
