--- a/mava/configs/env/gigastep.yaml
+++ b/mava/configs/env/gigastep.yaml
@@ -11,6 +11,9 @@ eval_metric: win_rate
 # Whether the environment observations encode implicit agent IDs. If True, the AgentID wrapper is not used.
 # This should not be changed.
 implicit_agent_id: False
+# Whether or not to log the winrate of this environment. This should not be changed as not all
+# environments have a winrate metric.
+log_win_rate: True
 
 # Currently we only support discrete actions and vector observations.
 kwargs:
