--- a/mava/configs/env/lbf.yaml
+++ b/mava/configs/env/lbf.yaml
@@ -16,6 +16,9 @@ eval_metric: episode_return
 # Whether the environment observations encode implicit agent IDs. If True, the AgentID wrapper is not used.
 # This should not be changed.
 implicit_agent_id: False
+# Whether or not to log the winrate of this environment. This should not be changed as not all
+# environments have a winrate metric.
+log_win_rate: False
 
 kwargs:
   time_limit: 100
