--- a/mava/configs/env/mabrax.yaml
+++ b/mava/configs/env/mabrax.yaml
@@ -16,6 +16,9 @@ eval_metric: episode_return
 # Note: When using homogenisation_method = "max", a one-hot vector representing the agent ID is added.
 # If the homogenisation method is changed, set this to False.
 implicit_agent_id: True
+# Whether or not to log the winrate of this environment. This should not be changed as not all
+# environments have a winrate metric.
+log_win_rate: False
 
 kwargs:
   episode_length: 1000
