--- a/mava/configs/system/q_learning/qmix.yaml
+++ b/mava/configs/system/q_learning/qmix.yaml
@@ -24,7 +24,7 @@ q_lr: 3e-4  # the learning rate of the Q network network optimizer
 max_grad_norm: 10 # value used to clip optimiser - set big for no clipping
 
 # other
-hard_update: False
+hard_update: True
 update_period: 200
 tau: 0.01  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
