--- a/mava/configs/default_vdn.yaml
+++ b/mava/configs/default_vdn.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
-  - logger: qmix
+  - logger: vdn
   - arch: anakin
-  - system: q_learning/qmix
+  - system: q_learning/vdn
   - network: rnn
   - env: smax
