feat: integration tests

--- a/mava/configs/default_ff_masac.yaml
+++ b/mava/configs/default_ff_masac.yaml
@@ -3,5 +3,5 @@ defaults:
   - logger: ff_masac
   - arch: anakin
   - system: sac/ff_masac
-  - network: mlp
+  - network: continuous_mlp
   - env: mabrax
