--- a/mava/configs/system/q_learning/rec_iql.yaml
+++ b/mava/configs/system/q_learning/rec_iql.yaml
@@ -1,5 +1,5 @@
 # --- Defaults REC-IDQN ---
-total_timesteps: ~ # Set the total environment steps.
+total_timesteps: 2e7 # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 num_updates: 156250 # Number of updates.
 seed: 1
@@ -8,14 +8,14 @@ seed: 1
 add_agent_id: True
 
 # --- RL hyperparameters ---
-min_buffer_size: 32
+min_buffer_size: 132
 update_batch_size: 1 # Number of vectorised gradient updates per device.
 
 rollout_length: 2 # Number of environment steps per vectorised environment.
 epochs: 2 # Number of learn epochs per training data batch.
 
 # sizes
-buffer_size: 5000 # size of the replay buffer. Note: total size is this * num_devices
+buffer_size: 3000 # size of the replay buffer. Note: total size is this * num_devices
 sample_batch_size: 32  # size of training data batch sampled from the buffer
 sample_sequence_length: 20 # 21 transitions are sampled, giving 20 complete data points
 
