--- a/mava/configs/system/ppo/ff_mappo.yaml
+++ b/mava/configs/system/ppo/ff_mappo.yaml
@@ -1,11 +1,11 @@
 # --- Defaults FF-MAPPO ---
 total_timesteps: ~ # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
-num_updates: 1000 # Number of updates
+num_updates: 1220 # Number of updates
 seed: 42
 
 # --- Agent observations ---
-add_agent_id: True
+add_agent_id: False
 
 # --- RL hyperparameters ---
 actor_lr: 2.5e-4 # Learning rate for actor network
