Added modified abs function, weight init and removed final layer in network.

--- a/mava/configs/system/q_learning/qmix.yaml
+++ b/mava/configs/system/q_learning/qmix.yaml
@@ -11,16 +11,16 @@ add_agent_id: True
 min_buffer_size: 132
 update_batch_size: 1 # Number of vectorised gradient updates per device.
 
-rollout_length: 2 # Number of environment steps per vectorised environment.
-epochs: 2 # Number of learn epochs per training data batch.
+rollout_length: 15 # Number of environment steps per vectorised environment.
+epochs: 1 # Number of learn epochs per training data batch.
 
 # sizes
-buffer_size: 3000 # size of the replay buffer. Note: total size is this * num_devices
+buffer_size: 13000 # size of the replay buffer. Note: total size is this * num_devices * num_envs
 sample_batch_size: 32  # size of training data batch sampled from the buffer
-sample_sequence_length: 20 # 21 transitions are sampled, giving 20 complete data points
+sample_sequence_length: 120 # 21 transitions are sampled, giving 20 complete data points
 
 # learning rates
-q_lr: 3e-4  # the learning rate of the Q network network optimizer
+q_lr: 5e-4  # the learning rate of the Q network network optimizer
 
 # other
 hard_update: True
@@ -29,4 +29,4 @@ tau: 0.01  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
 
 eps_min: 0.05
-eps_decay: 1e5
+eps_decay: 5e5
