--- a/mava/configs/arch/anakin.yaml
+++ b/mava/configs/arch/anakin.yaml
@@ -1,10 +1,10 @@
 # --- Anakin config ---
 
 # --- Training ---
-num_envs: 32  # Number of vectorised environments per device.
+num_envs: 16  # Number of vectorised environments per device.
 
 # --- Evaluation ---
-evaluation_greedy: False # Evaluate the policy greedily. If True the policy will select
+evaluation_greedy: True # Evaluate the policy greedily. If True the policy will select
   # an action which corresponds to the greatest logit. If false, the policy will sample
   # from the logits.
 num_eval_episodes: 32 # Number of episodes to evaluate per evaluation.
