--- a/mava/configs/system/q_learning/rec_iql.yaml
+++ b/mava/configs/system/q_learning/rec_iql.yaml
@@ -1,5 +1,5 @@
 # --- Defaults REC-IDQN ---
-total_timesteps: ~ # Set the total environment steps.
+total_timesteps: 2e7 # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 num_updates: 156250 # Number of updates.
 seed: 1
