--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -21,3 +21,4 @@ scipy==1.12.0
 tensorboard_logger
 tensorflow_probability
 type_enforced # needed because gigastep is missing this dependency
+rware @ git+https://github.com/RuanJohn/robotic-warehouse.git
