--- a/mava/configs/system/ppo/ff_ippo.yaml
+++ b/mava/configs/system/ppo/ff_ippo.yaml
@@ -1,6 +1,6 @@
 # --- Defaults FF-IPPO ---
 
-total_timesteps: ~ # Set the total environment steps.
+total_timesteps: 20_000_000 # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 num_updates: 1000 # Number of updates
 seed: 42
@@ -14,7 +14,7 @@ critic_lr: 2.5e-4 # Learning rate for critic network
 update_batch_size: 2 # Number of vectorised gradient updates per device.
 rollout_length: 128 # Number of environment steps per vectorised environment.
 ppo_epochs: 4 # Number of ppo epochs per training data batch.
-num_minibatches: 2 # Number of minibatches per ppo epoch.
+num_minibatches: 1 # Number of minibatches per ppo epoch.
 gamma: 0.99 # Discounting factor.
 gae_lambda: 0.95 # Lambda value for GAE computation.
 clip_eps: 0.2 # Clipping value for PPO updates and value function.
