--- a/mava/configs/env/scenario/multicvrp-2v-20c.yaml
+++ b/mava/configs/env/scenario/multicvrp-2v-20c.yaml
@@ -2,5 +2,8 @@ name: MultiCVRP-v0
 task_name: multicvrp-2v-20c
 
 task_config:
-  num_customers : 20
+  num_customers : 6
   num_vehicles : 2
+
+env_kwargs:
+  {}  # there are no scenario specific env_kwargs for this env
