--- a/mava/configs/env/scenario/multicvrp-2v-6c.yaml
+++ b/mava/configs/env/scenario/multicvrp-2v-6c.yaml
@@ -4,3 +4,6 @@ task_name: multicvrp-2v-6c
 task_config:
   num_customers : 6
   num_vehicles : 2
+
+env_kwargs:
+  {}  # there are no scenario specific env_kwargs for this env
