--- a/mava/configs/env/gym.yaml
+++ b/mava/configs/env/gym.yaml
@@ -1,22 +1,24 @@
 # ---Environment Configs---
+scenario: gym-2s-8x8-2p-2f-coop copy
 
-scenario: rware:rware-tiny-2ag-v1 # [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
-
-env_name: RobotWarehouse  # Used for logging purposes.
+env_name: Gym  # Used for logging purposes, will get changed to the scenario name at runtime.
 
 # Defines the metric that will be used to evaluate the performance of the agent.
 # This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
 eval_metric: episode_return
 
-# Whether the environment observations encode implicit agent IDs. If True, the AgentID wrapper is not used.
-# This should not be changed.
-implicit_agent_id: False
-# Whether or not to log the winrate of this environment. This should not be changed as not all
-# environments have a winrate metric.
+# Whether the add agents IDs to the observations returned by the environment.
+add_agent_id : False
+
+# Whether or not to log the winrate of this environment.
 log_win_rate: False
 
-# Weather or not to average the returned rewards over all of the agents.
-use_individual_rewards: True
+# Weather or not to sum the returned rewards over all of the agents.
+use_shared_rewards: True
 
 kwargs:
-  time_limit: 500
+  {}
+
+# Possible scenarios:
+# RobotWarehouse : [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
+# LevelBasedForaging : [2s-8x8-2p-2f-coop, 8x8-2p-2f-coop, 2s-10x10-3p-3f, 10x10-3p-3f, 15x15-3p-5f, 15x15-4p-3f, 15x15-4p-5f]
