--- a/mava/configs/arch/anakin.yaml
+++ b/mava/configs/arch/anakin.yaml
@@ -1,5 +1,5 @@
 # --- Anakin config ---
-arch_name: "Anakin"
+arch_name: anakin
 
 # --- Training ---
 num_envs: 16  # Number of vectorised environments per device.
