--- a/mava/configs/arch/sebulba.yaml
+++ b/mava/configs/arch/sebulba.yaml
@@ -1,5 +1,5 @@
 # --- Sebulba config ---
-arch_name: "Sebulba"
+arch_name: sebulba
 
 # --- Training ---
 num_envs: 32  # number of environments per thread.
