--- a/mava/configs/env/rware_gym.yaml
+++ b/mava/configs/env/rware_gym.yaml
@@ -1,7 +1,7 @@
 # ---Environment Configs---
-scenario: gym-2s-8x8-2p-2f-coop copy
+scenario: gym-2s-8x8-2p-2f-coop # [gym-tiny-2ag, gym-tiny-4ag, gym-tiny-4ag-easy, gym-small-4ag]
 
-env_name: Gym  # Used for logging purposes, will get changed to the scenario name at runtime.
+env_name: RobotWarehouse  # Used for logging purposes.
 
 # Defines the metric that will be used to evaluate the performance of the agent.
 # This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
@@ -18,7 +18,3 @@ use_shared_rewards: True
 
 kwargs:
   {}
-
-# Possible scenarios:
-# RobotWarehouse : [tiny-2ag, tiny-4ag, tiny-4ag-easy, small-4ag]
-# LevelBasedForaging : [2s-8x8-2p-2f-coop, 8x8-2p-2f-coop, 2s-10x10-3p-3f, 10x10-3p-3f, 15x15-3p-5f, 15x15-4p-3f, 15x15-4p-5f]
