chore: renamed arch_name to architecture_name

--- a/mava/configs/arch/sebulba.yaml
+++ b/mava/configs/arch/sebulba.yaml
@@ -1,5 +1,5 @@
 # --- Sebulba config ---
-arch_name: sebulba
+architecture_name: sebulba
 
 # --- Training ---
 num_envs: 32  # number of environments per thread.
