--- a/mava/configs/env/rware_gym.yaml
+++ b/mava/configs/env/rware_gym.yaml
@@ -1,5 +1,5 @@
 # ---Environment Configs---
-scenario: gym-2s-8x8-2p-2f-coop # [gym-tiny-2ag, gym-tiny-4ag, gym-tiny-4ag-easy, gym-small-4ag]
+scenario: gym-2s-8x8-2p-2f-coop # [gym-rware-tiny-2ag, gym-rware-tiny-4ag, gym-rware-tiny-4ag-easy, gym-rware-small-4ag]
 
 env_name: RobotWarehouse  # Used for logging purposes.
 
@@ -15,6 +15,3 @@ log_win_rate: False
 
 # Weather or not to sum the returned rewards over all of the agents.
 use_shared_rewards: True
-
-kwargs:
-  {}
