--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,13 +3,14 @@ distrax @ git+https://github.com/google-deepmind/distrax  # distrax release does
 flashbax~=0.1.0
 flax
 gigastep @ git+https://github.com/mlech26l/gigastep
+gymnasium
 hydra-core==1.3.2
 id-marl-eval @ git+https://github.com/instadeepai/marl-eval
 jax
 jaxlib
 jaxmarl
 jumanji @ git+https://github.com/sash-a/jumanji
-lbforaging @ git+https://github.com/Louay-Ben-nessir/lb-foraging.git
+lbforaging @ git+https://github.com/LukasSchaefer/lb-foraging.git@gymnasium_integration
 matrax @ git+https://github.com/instadeepai/matrax
 mujoco==3.1.3
 mujoco-mjx==3.1.3
