--- a/mava/configs/arch/anakin.yaml
+++ b/mava/configs/arch/anakin.yaml
@@ -1,5 +1,6 @@
 # --- Anakin config ---
-arch_name: "Anakin"
+architecture_name: anakin
+
 # --- Training ---
 num_envs: 16  # Number of vectorised environments per device.
 
