--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -3,12 +3,14 @@ distrax @ git+https://github.com/google-deepmind/distrax  # distrax release does
 flashbax~=0.1.0
 flax
 gigastep @ git+https://github.com/mlech26l/gigastep
+gymnasium
 hydra-core==1.3.2
 id-marl-eval @ git+https://github.com/instadeepai/marl-eval
 jax
 jaxlib
 jaxmarl
 jumanji @ git+https://github.com/sash-a/jumanji
+lbforaging @ git+https://github.com/LukasSchaefer/lb-foraging.git@gymnasium_integration # fixes: https://github.com/semitable/lb-foraging/issues/20
 matrax @ git+https://github.com/instadeepai/matrax
 mujoco==3.1.3
 mujoco-mjx==3.1.3
@@ -17,7 +19,7 @@ numpy
 omegaconf
 optax
 protobuf~=3.20
-rware @ git+https://github.com/RuanJohn/robotic-warehouse.git
+rware @ git+https://github.com/RuanJohn/robotic-warehouse.git # compatibility with latest gymnasium
 scipy==1.12.0
 tensorboard_logger
 tensorflow_probability
