chore: add python 3.11 to github workflow

--- a/.github/workflows/tests_linters.yaml
+++ b/.github/workflows/tests_linters.yaml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.12", "3.11"]
         os: [ubuntu-latest]
 
     steps:
