--- a/.github/workflows/tests_linters.yaml
+++ b/.github/workflows/tests_linters.yaml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
             python-version: "${{ matrix.python-version }}"
+      - name: Upgrade pip
+        run: pip install --upgrade pip
       - name: Install python dependencies 🔧
         run: pip install .[dev]
       - name: Run linters 🖌️
