--- a/mava/configs/env/scenario/gym-lbf-2s-8x8-2p-2f-coop.yaml
+++ b/mava/configs/env/scenario/gym-lbf-2s-8x8-2p-2f-coop.yaml
@@ -5,11 +5,14 @@ task_name: 2s-8x8-2p-2f-coop
 task_config:
   field_size: [8, 8] # size of the grid to generate.
   sight: 2 # field of view of an agent.
-  num_agents: 2 # number of agents on the grid.
-  max_food: 2 # number of food in the environment.
+  players: 2 # number of agents on the grid.
+  max_num_food: 2 # number of food in the environment.
   max_player_level: 2 # maximum level of the agents (inclusive).
   force_coop: True # force cooperation between agents.
   max_episode_steps: 50 # max number of steps per episode.
+  min_player_level : 1 # minimum level of the agents (inclusive).
+  min_food_level : null
+  max_food_level : null
 
 env_kwargs:
   {}  # there are no scenario specific env_kwargs for this env
