--- a/mava/configs/env/scenario/gym-lbf-10x10-3p-3f.yaml
+++ b/mava/configs/env/scenario/gym-lbf-10x10-3p-3f.yaml
@@ -5,11 +5,14 @@ task_name: 10x10-3p-3f
 task_config:
   field_size: [10,10]
   sight: 10
-  num_agents: 3
-  max_food: 3
+  players: 3
+  max_num_food: 3
   max_player_level: 2
   force_coop: False
   max_episode_steps: 50
+  min_player_level : 1
+  min_food_level : null
+  max_food_level : null
 
 env_kwargs:
   {}  # there are no scenario specific env_kwargs for this env
