--- a/mava/configs/default_ff_isac.yaml
+++ b/mava/configs/default_ff_isac.yaml
@@ -3,5 +3,5 @@ defaults:
   - logger: ff_isac
   - arch: anakin
   - system: sac/ff_isac
-  - network: continuous_mlp
-  - env: mabrax
+  - network: continuous_mlp  # [continuous_mlp]
+  - env: mabrax  # [mabrax]
