--- a/mava/configs/default_ff_mappo.yaml
+++ b/mava/configs/default_ff_mappo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: ff_mappo
   - arch: anakin
   - system: ppo/ff_mappo
-  - network: mlp
-  - env: rware
+  - network: mlp  # [mlp, continuous_mlp, cnn]
+  - env: rware  # [cleaner, connector, gigastep, lbf, mabrax, matrax, rware, smax]
   - _self_
