--- a/mava/configs/default_rec_mappo.yaml
+++ b/mava/configs/default_rec_mappo.yaml
@@ -2,6 +2,6 @@ defaults:
   - logger: rec_mappo
   - arch: anakin
   - system: ppo/rec_mappo
-  - network: rnn
-  - env: rware
+  - network: rnn  # [rnn, rcnn]
+  - env: rware  # [cleaner, connector, gigastep, lbf, mabrax, matrax, rware, smax]
   - _self_
