feat: add cont smax

--- a/mava/configs/default_ff_hasac.yaml
+++ b/mava/configs/default_ff_hasac.yaml
@@ -4,4 +4,4 @@ defaults:
   - arch: anakin
   - system: sac/ff_hasac
   - network: continuous_mlp  # [continuous_mlp]
-  - env: mabrax  # [mabrax]
+  - env: smax  # [mabrax]
