--- a/mava/configs/default/anakin/default_ff_masac.yaml
+++ b/mava/configs/default/anakin/default_ff_masac.yaml
@@ -1,7 +1,11 @@
 defaults:
   - _self_
-  - logger: ff_masac
+  - logger: base_logger
   - arch: anakin
   - system: sac/ff_masac
   - network: continuous_mlp  # [continuous_mlp]
   - env: mabrax  # [mabrax]
+
+hydra:
+  searchpath:
+    - file://mava/configs
