--- a/mava/configs/default/ff_ippo.yaml
+++ b/mava/configs/default/ff_ippo.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - logger: base_logger
+  - logger: logger
   - arch: anakin
   - system: ppo/ff_ippo
   - network: mlp  # [mlp, continuous_mlp, cnn]
