--- a/mava/configs/default/ff_isac.yaml
+++ b/mava/configs/default/ff_isac.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - logger: base_logger
+  - logger: logger
   - arch: anakin
   - system: sac/ff_isac
   - network: continuous_mlp  # [continuous_mlp]
