--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,7 +9,7 @@ id-marl-eval @ git+https://github.com/instadeepai/marl-eval
 jax
 jaxlib
 jaxmarl
-jumanji @ git+https://github.com/sash-a/jumanji
+jumanji @ git+https://github.com/sash-a/jumanji@old_jumanji
 lbforaging @ git+https://github.com/LukasSchaefer/lb-foraging.git@gymnasium_integration # fixes: https://github.com/semitable/lb-foraging/issues/20
 matrax @ git+https://github.com/instadeepai/matrax
 mujoco==3.1.3
