chore: a few minor changes to code style

--- a/mava/configs/arch/sebulba.yaml
+++ b/mava/configs/arch/sebulba.yaml
@@ -16,7 +16,7 @@ absolute_metric: True # Whether the absolute metric should be computed. For more
 
 # --- Sebulba devices config ---
 n_threads_per_executor: 2  # num of different threads/env batches per actor
-executor_device_ids: [0] # ids of actor devices
+actor_device_ids: [0] # ids of actor devices
 learner_device_ids: [0] # ids of learner devices
 rollout_queue_size : 5
 # The size of the pipeline queue determines the extent of off-policy training allowed. A larger value permits more off-policy training.
