feat: qmix piping through with distributional networks

--- a/mava/configs/default/rec_qmix.yaml
+++ b/mava/configs/default/rec_qmix.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - logger: base_logger
+  - logger: logger
   - arch: anakin
   - system: q_learning/rec_qmix
   - network: rnn
