--- a/mava/configs/default/ff_ippo.yaml
+++ b/mava/configs/default/ff_ippo.yaml
@@ -3,7 +3,7 @@ defaults:
   - arch: anakin
   - system: ppo/ff_ippo
   - network: mlp  # [mlp, continuous_mlp, cnn]
-  - env: rware  # [cleaner, connector, gigastep, lbf, mabrax, matrax, rware, smax]
+  - env: mpe  # [cleaner, connector, gigastep, lbf, mabrax, matrax, rware, smax]
   - _self_
 
 hydra:
