feat: add sable network file

--- a/mava/configs/network/retention.yaml
+++ b/mava/configs/network/retention.yaml
@@ -1,7 +1,7 @@
 # --- Network params ---
 actor_network:
   n_block: 1 # Number of blocks
-  n_embd: 64 # Number of embeddings
+  embed_dim: 64 # Embedding dimension
   n_head: 1 # Number of heads
   decay_scaling_factor: 0.8 # Decay scaling factor for the kappa parameter: kappa = kappa * decay_scaling_factor
   obs_prenorm_fn_name: rmsnorm # Observation pre-normalisation function name [layernorm, rmsnorm, identity]
